HBASE-2140 findbugs issues - 2 performance warnings as suggested by findbugs
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hbase/trunk@900208 13f79535-47bb-0310-9956-ffa450edef68